--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@ small {
     text-decoration: underline;
 }
 
+td:hover {
+    cursor: pointer;
+    opacity: 0.8;
+    background-color: #4e4e4e;
+}
+
 .num {
     text-align: center;
 }
